@@ -1,6 +1,11 @@
 Nodeenv changelog
 =================
 
+Version [unreleased]
+--------------------
+
+- Added check for how `activate` is called.
+
 Version 1.3.1
 -------------
 - Windows related fix `#207 <https://github.com/ekalinin/nodeenv/pull/207>`_
